# Synapse-Websoket

./: Makefile  README.md  install.ps1  pyproject.toml  requirements.txt  run_server.bat  run_server.sh
.github/workflows/: ci.yml
examples/: demo_client.py
src/synapse_ws/: __main__.py  client.py  connection.py  protocol.py  server.py
tests/: test_e2e.py  test_unit.py
