[tool.poetry]
name = "synapse-ws-exercise"
version = "0.1.0"
description = "WebSocket client-server exercise (Synapse)"
authors = ["Synapse <synapse@gmail.com>"]
readme = "README.md"
packages = [{ include = "synapse_ws", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.95"
uvicorn = {extras=["standard"], version = "^0.22"}
websockets = "^11.0"
pydantic = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21"
ruff = "^0.13.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
